tests/baselines/reference/staticModifierAlreadySeen.errors.txt
staticModifierAlreadySeen.ts(2,12): error TS1434: Unexpected keyword or identifier.
staticModifierAlreadySeen.ts(3,19): error TS1434: Unexpected keyword or identifier.
staticModifierAlreadySeen.ts(3,19): error TS2300: Duplicate identifier 'static'.


==== staticModifierAlreadySeen.ts (3 errors) ====
    class C {
        static static foo = 1;
               ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
        public static static bar() { }
                      ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                      ~~~~~~
!!! error TS2300: Duplicate identifier 'static'.
    }